# ChangeLog for net-analyzer/nmap
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/ChangeLog,v 1.196 2009/04/18 15:05:19 spock Exp $

  18 Apr 2009; Michał Januszewski <spock@gentoo.org>
  -files/nmap-4.01-nostrip.patch, -files/nmap-4.20-osscan.patch,
  -files/nmap-4.68-concurrent-make-fix.patch, -files/nmap-4.68-nolua.patch,
  -files/nmap-shtool-nls.patch, -nmap-4.20.ebuild, -nmap-4.53.ebuild,
  -nmap-4.60.ebuild, -nmap-4.68.ebuild, -nmap-4.75.ebuild:
  Remove old ebuilds.

  18 Apr 2009; Michał Januszewski <spock@gentoo.org>
  nmap-4.85_beta7.ebuild:
  Fix bug #266126 (pre-stripped files installed by the ebuild).

*nmap-4.85_beta7 (10 Apr 2009)

  10 Apr 2009; Michał Januszewski <spock@gentoo.org>
  +nmap-4.85_beta7.ebuild:
  Version bump (bug #265692).

  08 Mar 2009; Dawid Węgliński <cla@gentoo.org> nmap-4.76.ebuild:
  Prevent double emake

  08 Mar 2009; Dawid Węgliński <cla@gentoo.org> nmap-4.76.ebuild:
  Migration to EAPI 2

  28 Oct 2008; Brent Baude <ranger@gentoo.org> nmap-4.76.ebuild:
  stable ppc64, bug 242598

  19 Oct 2008; Raúl Porcel <armin76@gentoo.org> nmap-4.76.ebuild:
  alpha/ia64/sparc stable wrt #242598

  18 Oct 2008; Guy Martin <gmsoft@gentoo.org> nmap-4.76.ebuild:
  hppa stable, #242598

  18 Oct 2008; Dawid Węgliński <cla@gentoo.org> nmap-4.76.ebuild:
  Stable on x86/amd64 (bug #242598)

  18 Oct 2008; nixnut <nixnut@gentoo.org> nmap-4.76.ebuild:
  Stable on ppc wrt bug 242598

*nmap-4.76 (13 Sep 2008)

  13 Sep 2008; Michał Januszewski <spock@gentoo.org> +nmap-4.76.ebuild:
  Version bump.

  10 Sep 2008; Michał Januszewski <spock@gentoo.org> -nmap-4.62.ebuild,
  -nmap-4.65.ebuild:
  Remove old ebuilds.

  10 Sep 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/nmap-4.75-nolua.patch, nmap-4.75.ebuild:
  fix bug #237150, compiling with USE='-lua'. Fix from Simon Zilliken
  <simon@zilliken.name>

*nmap-4.75 (09 Sep 2008)
