@@ -3,7 +3,9 @@ AUX nmap-4.75-nolua.patch 364 RMD160 90ec068c5a267dd43737fb39828b3c9c372e19b1 SH
 AUX nmap-logo-64.png 3289 RMD160 0f0a9ec49ecffc97517b8d048888a6fd5dce0ab0 SHA1 c36250c662ee9058974a2215c579c3f45ddaf2d0 SHA256 4c72ff1eeffeeaa1039b251d9f2d675936e65db686fe3b57a35c2183ce67a8aa
 DIST nmap-4.76.tar.bz2 6061317 RMD160 ec93522e05e7233e8950b28ab12b45355e63c0c7 SHA1 a71141738b4512b6d5b35ef94258e525df30a586 SHA256 4e24328ca6ec97afb2a8caf312b1f111a15cf41763a5ac41e7a633fdb217d66d
 DIST nmap-4.85BETA7.tar.bz2 6454664 RMD160 c64585598487e63e15443853230d29eee72ef11c SHA1 c7660aa6d48516fe8085032e5de771df4a5eff95 SHA256 dfff90a51fa44770a48dbeb31378d090ee334e4df2d013c8934f6ebf33eaabe5
+DIST nmap-4.85BETA8.tar.bz2 6484436 RMD160 d91a853ba534e1d567b8df1829ddde8b6f033d94 SHA1 22a1fb0c4af5db8c2b18a300aee1f4bcfec49830 SHA256 cbb47abcf494d92a21c9618f9d76d7a26c9d33bda750dd2c2e6fc76f64a95668
 EBUILD nmap-4.76.ebuild 1472 RMD160 b4593cf720ab69e4eb0a606308ee6b45af5c430a SHA1 990a5ce00c36f0ee95f751b0c260973b5b84a59a SHA256 57d67cdb2ba8a9338eec577a57de268b04832744e8417ddf8860300186fd7e68
 EBUILD nmap-4.85_beta7.ebuild 1590 RMD160 f65cc578e524080eed3f9a2ad496a7ea0be51740 SHA1 d79e36d1bb5603f9fcd24639b75cd6e52475e534 SHA256 ce32662910919998d45a37ad9d1eb3ff7fb47bc968a0392115e70acee20d084d
-MISC ChangeLog 23748 RMD160 8f1772f95fc5927673e1a7b7ee8856df97259995 SHA1 47b693c2be44bce1aac0889e2f277c024669ec33 SHA256 59f6d0e1fb28dd7438c5f8e9a581f01c1ad4f6de19e360506390db9cd2c8ccb7
+EBUILD nmap-4.85_beta8.ebuild 1590 RMD160 838a96e15061b1a65e3b1fb10917d84068f3c7aa SHA1 4176356e99b8297f8359b5dea617e54bbf325c8a SHA256 8dd0e57fc907270bc56279652df63444aab193f273b3ed6a2ccb2501a861f6f2
+MISC ChangeLog 23892 RMD160 c307b3c5bfbfc8e470a1994f55934fa9997f04d3 SHA1 54903ccb8f6f09a108d6ffd259386c0677ea65ea SHA256 a034629740c8cc46c16b35b22377e035bdc58f0a31ac324e2aa9c5875d3a1bcc
 MISC metadata.xml 220 RMD160 e546581ce5539acad3af6c34d9aa3cf620d7f3a8 SHA1 6a6d5d3526e99d62e789655226cdda4b343a913f SHA256 acc28d2b0a26781492524b195565470457168bd704c817430d76770844b5d42a
