@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/nmap
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/ChangeLog,v 1.196 2009/04/18 15:05:19 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/ChangeLog,v 1.197 2009/04/25 07:15:05 spock Exp $
+
+*nmap-4.85_beta8 (25 Apr 2009)
+
+  25 Apr 2009; Michał Januszewski <spock@gentoo.org>
+  +nmap-4.85_beta8.ebuild:
+  Version bump (bug #267122).
 
   18 Apr 2009; Michał Januszewski <spock@gentoo.org>
   -files/nmap-4.01-nostrip.patch, -files/nmap-4.20-osscan.patch,
